# docs/swagger.json
@@ -4,6 +4,44 @@
         "contact": {}
     },
     "paths": {
+        "/friend/MakeFriendById": {
+            "post": {
+                "description": "send application(make frind)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Friend"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "对方账号",
+                        "name": "friend_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密令",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/index": {
             "get": {
                 "description": "index",
