# net/router/router.go
@@ -17,5 +17,7 @@ func Router() *gin.Engine {
 	router.POST("/user/CreateUser", service.CreateUser)
 	router.POST("/user/Login", service.Login)
 	router.POST("/user/TestToken", service.TestToken)
+	router.POST("/friend/MakeFriendById", service.MakeFriendById)
+	router.GET("/ws", service.HandleWebSocket)
 	return router
 }
